[package]
name        = "zcpy"
version     = "0.1.0"
edition     = "2021"
description = "Zero-Copy time-series ingestion layer — Rust host API"

[lib]
name       = "zcpy"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
